--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
     "build:core": "pnpm --filter \"./packages/core\" build",
     "build:sdk": "pnpm --filter \"./packages/sdk\" build",
     "build:llm": "pnpm --filter \"./packages/llm\" build",
+    "build:apps": "pnpm --filter \"./apps/*\" build",
     "version-packages": "changeset version",
     "publish-packages": "turbo run build && changeset publish"
   },
